2004-12-30  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : mark the Data hashtable obsolete.

2004-12-30  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide TreeView.InsertColumnWith*.
	* gtk/TreeView.cs : manual implementations of InsertColumn overloads
	for WithAttributes and WithDataFunc.

2004-12-30  Alp Toker  <alp@atoker.com>

	* README.generator: Close tag fix for example XML.

2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* sample/gnomevfs/TestVolumes.cs: Update sample.

2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Gnomevfs.metadata: Hide some more API.
	* gnomevfs/VfsStreamAsyncResult.cs: Make Done property internal.
	* gnomevfs/VolumeMonitor.custom: Hide GList API.

2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Directory.cs: PInvoke the _uri methods directory instead of
	using the ToString() methods.
	* gnomevfs/FileInfo.cs: Make the FileInfoNative field internal.
	* gnomevfs/Gnomevfs.metadata: Hide a bunch of unwanted API.
	* gnomevfs/Uri.custom: New API.
	* gnomevfs/Vfs.cs: Idem.

2004-12-27  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : use ReturnValue and more of Parameter.
	* generator/GenBase.cs : remove unused NSElem prop.

2004-12-27  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Directory.cs: s/uint/FilePermissions/.
	* gnomevfs/Gnomevfs.metadata: Make a bunch of API more user-friendly &
	C# like.
	* gnomevfs/Monitor.cs: Add internal MonitorEventType enum.
	* gnomevfs/Uri.custom: Move a bunch of API from Vfs.cs to Uri.
	* gnomevfs/Vfs.cs: Only put initialize & shutdown methods in here (plus
	some debug API).
	* gnomevfs/VfsStream.cs: Use new Uri API.
	* sample/gnomevfs/TestUnlink.cs: Fix sample.

2004-12-27  Mike Kestner  <mkestner@novell.com>

	* generator/EnumGen.cs : rework for a single pass thru ChildNodes.
	* generator/Parameters.cs : simplify PassAs logic.
	* generator/SimpleBase.cs : mark abstract.
