@@ -1,3 +1,7 @@
+2005-01-03  Mike Kestner  <mkestner@novell.com>
+	
+	* en/Gtk/TreeNodeAttribute.xml : document ListOnly and add example.
+
 2005-01-03  Shane Landrum  <epicene@pobox.com>
 	
 	* en/Gtk/DrawingArea.xml
