@@ -1,3 +1,9 @@
+2005-01-03  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/NodeStore.cs : expose TreeModelFlags.ListOnly if the TreeNode
+	has ListOnly set.
+	* gtk/TreeNodeAttribute.cs : add ListOnly named value.
+
 2004-12-30  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Object.cs : mark the Data hashtable obsolete.
